--- a/onboarding-ws/src/main/resources/application.properties
+++ b/onboarding-ws/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=onboarding
+spring.application.name=onboarding-ws
+
+spring.datasource.url=jdbc:mysql://localhost:3306/xyz-bank
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
