--- a/onboarding-ws/src/main/resources/application.properties
+++ b/onboarding-ws/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+server.port=8080
+server.servlet.context-path=/api/v1
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
