--- a/onboarding-ws/pom.xml
+++ b/onboarding-ws/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
