--- a/onboarding-ws/pom.xml
+++ b/onboarding-ws/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>commons-text</artifactId>
             <version>1.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
