--- a/onboarding-ws/pom.xml
+++ b/onboarding-ws/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>java-jwt</artifactId>
             <version>4.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
